@@ -16,4 +16,19 @@ module HtmlHelper
           capture(&block) +
         "</html>"
   end
+
+  def random_avatar size=64, css_class
+    value = (rand() * 4 + 1).to_i
+    image_tag "dresssed/stock/#{value}.jpg", class: css_class, width: size, height: size
+  end
+
+  def random_landscape width='100%', css_class=''
+    image_tag random_landscape_name, class: css_class, width: width
+  end
+
+  def random_landscape_name
+    value = (rand() * 10 + 1).to_i
+    "dresssed/stock/landscape_#{value}.jpg"
+  end
+
 end
