@@ -3,20 +3,6 @@ module ApplicationHelper
     "My App"
   end
 
-  def random_avatar size=64, css_class
-    value = (rand() * 4 + 1).to_i
-    image_tag "#{value}.jpg", class: css_class, width: size, height: size
-  end
-
-  def random_landscape width='100%', css_class=''
-    image_tag random_landscape_name, class: css_class, width: width
-  end
-
-  def random_landscape_name
-    value = (rand() * 10 + 1).to_i
-    "landscape_#{value}.jpg"
-  end
-
   def current_style
     cookies[:style] || 'blue'
   end
